Minor changes to DisplayText (better URL generation...)